@@ -88,7 +88,7 @@ ID rb_id_encoding(void);
 void rb_gc_mark_encodings(void);
 
 /* enum.c */
-VALUE enum_cycle_size(VALUE self, VALUE args);
+VALUE rb_enum_cycle_size(VALUE self, VALUE args);
 
 /* error.c */
 NORETURN(PRINTF_ARGS(void rb_compile_bug(const char*, int, const char*, ...), 3, 4));
